--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ env:
   global:
     - TOXENV="py${PYTHON_VERSION//./}"
 
+before_install:
+  - openssl aes-256-cbc -K $encrypted_fb7962ff6e71_key -iv $encrypted_fb7962ff6e71_iv -in .credentials.json.enc -out .credentials.json -d
+
 install:
   - pip install -Urrequirements.dev.txt
 
